# ai-template-engine

./: .env.example  .gitignore  ACCESS.md  LOCAL_ACCESS.md  QUICKSTART.md  README.md  STUDIO_ACCESS.md  STUDIO_URL.txt  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
src/: __init__.py
src/orchestrator/: __init__.py  graph.py  main.py  state.py
src/orchestrator/nodes/: __init__.py  analyze.py  extract.py  generate.py  hitl.py  init.py  setup.py  verify.py
src/orchestrator/tools/: __init__.py  mcp_registry.py
tests/: __init__.py  test_state.py
