[project]
name = "ai-template-engine"
version = "0.1.0"
description = "LangGraph-based orchestration system for automated repository analysis and Harness CI/CD setup"
authors = [
    { name = "Lobbi Team", email = "team@lobbi.ai" }
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
keywords = [
    "harness",
    "ci-cd",
    "langgraph",
    "automation",
    "orchestration",
    "mcp",
    "template-engine",
    "infrastructure-as-code"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "langgraph>=0.2.49",
    "langchain>=0.3.14",
    "langchain-anthropic>=0.3.6",
    "langchain-core>=0.3.25",
    "langchain-mcp-adapters>=0.1.10",
    "anthropic>=0.47.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.2",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "click>=8.1.8",
    "rich>=13.9.4",
    "typer>=0.16.1",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
]

[project.scripts]
ai-template-engine = "orchestrator.main:main"
orchestrator = "orchestrator.main:main"

[project.urls]
Homepage = "https://github.com/the-Lobbi/ai-template-engine"
Repository = "https://github.com/the-Lobbi/ai-template-engine.git"
Issues = "https://github.com/the-Lobbi/ai-template-engine/issues"
Harness = "https://app.harness.io"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchestrator*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring MCP servers",
    "slow: Slow-running tests",
    "requires_harness: Tests requiring Harness API access",
    "requires_github: Tests requiring GitHub API access",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
strict_concatenate = true
